// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components <CheckboxGroup /> renders correctly 1`] = `
<fieldset
  className="checkbox-group"
>
  <legend>
    <span />
      
  </legend>
  <div>
    <div>
      <div />
    </div>
  </div>
</fieldset>
`;

exports[`components <RadioGroup /> renders correctly 1`] = `
<fieldset
  className="radio-group"
>
  <legend />
  <div>
    <div>
      <div />
    </div>
  </div>
</fieldset>
`;

exports[`components <TextField /> renders correctly 1`] = `
<div
  className="input-group"
>
  <label>
    <span />
  </label>
  <div>
    <input
      type="text"
    />
  </div>
</div>
`;
